Updated pom to use java13 preview features